--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -3,11 +3,11 @@
 // --------------------------------------------
 
 // TYPOGRAPHY
-$typograph__font-family: "Karla", sans-serif;
-$typograph__font-size--initial: 62.5%;
-$typograph__font-size: 1.6rem;
-$typograph__font-weight: 400;
-$typograph__color: hsl(216, 30%, 68%);
+$typography__font-family: "Karla", sans-serif;
+$typography__font-size--initial: 62.5%;
+$typography__font-size: 1.6rem;
+$typography__font-weight: 400;
+$typography__color: hsl(216, 30%, 68%);
 
 // HEADINGS
 $heading__font-family: "DM Serif Display", serif;
